Revert "add checking for preview flags in jbuilder"
This reverts commit e81c55e2a8b7d421792d7be61c8abc1668e3af2b.